--- a/frontend/src/pages/noticePage.html
+++ b/frontend/src/pages/noticePage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>이용 관련 안내</title>
-    <link rel="stylesheet" href="../assets/css/noticePageStyle.css">
+    <link rel="stylesheet" href=".../assets/css/noticePageStyle.css">
 </head>
 <body>
     <div class="wrapper">
@@ -16,7 +16,7 @@
                 <span>[공지]</span> <span>예약 및 이용 관련 안내</span>
             </div> 
             <div class="profile">
-                <img src="../assets/img/lachelnProfileImg.png" alt="프로필이미지">
+                <img src=".../assets/img/lachelnProfileImg.png" alt="프로필이미지">
                 <span class="profile-name">Lacheln</span>
             </div> 
 
